--- a/_design/sass/pages/_basic.scss
+++ b/_design/sass/pages/_basic.scss
@@ -13,7 +13,7 @@
 
     .main-content-wrapper {
         background: #fff;
-        margin-top: -9.3em;
+        margin-top: -7.7em;
         @include max-width;
         padding: 1em;
 
